<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/main_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/leftButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_back"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/button_color"
                    android:textSize="16sp"
                    android:text="@string/text_settings"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/rightButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">


            </FrameLayout>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textWithdraw"
        style="@style/buttonStyle"
        android:text="@string/text_withdraw"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textI2p"
        style="@style/buttonStyle"
        android:text="@string/text_i2p"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textColopr"
        style="@style/buttonStyle"
        android:text="@string/text_colopr"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textDate"
        style="@style/buttonStyle"
        android:text="@string/text_date"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textLanguage"
        style="@style/buttonStyle"
        android:text="@string/text_language"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textHistory"
        style="@style/buttonStyle"
        android:text="@string/text_history_settings"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textNick"
        style="@style/buttonStyle"
        android:text="@string/text_nick"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>