<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/main_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/leftButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_back"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/button_color"
                    android:text="@string/text_exchange_complete"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/rightButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">

            </FrameLayout>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_you_give"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/button_color"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="21.53 USD"
            android:layout_marginLeft="30dp"
            android:textColor="@color/button_color"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_you_receive"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/button_color"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="650.00 RUB"
            android:layout_marginLeft="30dp"
            android:textColor="@color/button_color"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="10.00 EUR"
            android:layout_marginLeft="30dp"
            android:textColor="@color/button_color"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="0.00 ___"
            android:layout_marginLeft="30dp"
            android:textColor="@color/button_color"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textOk"
        style="@style/buttonStyle"
        android:text="@string/text_ok"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textCancel"
        style="@style/buttonStyle"
        android:text="@string/text_cancel"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>