<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/main_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/leftButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_back"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/button_color"
                    android:text="@string/text_create_check"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/rightButton"
                android:layout_width="60dp"
                android:layout_height="match_parent">

            </FrameLayout>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_color"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:text="@string/text_do_you_want_send"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/edit_text_color"
            android:gravity="center">

            <EditText
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@null"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textColor="@color/button_color"
                android:minWidth="20dp"/>

            <TextView
                android:id="@+id/textHz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="USD"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/button_color"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_color"
            android:textSize="18sp"
            android:text="@string/text_current_balance"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/textBalance"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_color"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textOk"
        style="@style/buttonStyle"
        android:text="@string/text_ok"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textCancel"
        style="@style/buttonStyle"
        android:text="@string/text_cancel"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>